--- a/examples/web/static/index.html
+++ b/examples/web/static/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kronos Demo</title>
+  <title>Demo</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
 </head>
 <body>
   <header>
-    <h1>Kronos Prediction Demo</h1>
+    <h1>Prediction Demo</h1>
     <div class="muted">TradingView Lightweight Charts</div>
   </header>
   <div class="container">
